--- a/JetpackMvvm/build.gradle
+++ b/JetpackMvvm/build.gradle
@@ -5,7 +5,8 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'maven-publish'
 
 android {
-    compileSdk 30
+    compileSdkVersion 30
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         minSdkVersion 21
