--- a/yic-lib/build.gradle
+++ b/yic-lib/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'maven-publish'
 }
 
 android {
@@ -34,6 +35,8 @@ dependencies {
 
     compileOnly(fileTree("libs"))
     api(project(":yic-lib"))
+
+    implementation 'com.github.jitpack:android-example:1.0.1'
 
     api 'com.google.android.material:material:1.9.0'
     api 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -95,4 +98,18 @@ dependencies {
 
     api 'pl.droidsonroids.gif:android-gif-drawable:1.2.28'
     api 'com.yanzhenjie.recyclerview:x:1.3.2'
+}
+
+afterEvaluate {
+    publishing {
+        publications {
+            // Creates a Maven publication called "release".
+            release(MavenPublication) {
+                from components.release
+                groupId = 'com.github.9694101'
+                artifactId = 'YicLibrary'
+                version = '1.0'
+            }
+        }
+    }
 }
