--- a/JetpackMvvm/build.gradle
+++ b/JetpackMvvm/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'maven-publish'
 
@@ -40,6 +39,8 @@ dependencies {
     //kotlin
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.9.0"
     api 'androidx.core:core-ktx:1.10.1'
+    api "org.jetbrains.kotlin:kotlin-android-extensions:1.9.0"
+
     //lifecycle
     api 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     api 'androidx.lifecycle:lifecycle-common-java8:2.3.1'
