--- a/JetpackMvvm/build.gradle
+++ b/JetpackMvvm/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     //kotlin
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.9.0"
     api 'androidx.core:core-ktx:1.10.1'
-    api "org.jetbrains.kotlin:kotlin-android-extensions:1.9.0"
+    // api "org.jetbrains.kotlin:kotlin-android-extensions:1.7.20"
 
     //lifecycle
     api 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
