--- a/yic-lib/build.gradle
+++ b/yic-lib/build.gradle
@@ -34,15 +34,15 @@ artifacts.add("default", file("HumeSDK-1.1.1.aar"))
 dependencies {
 
     compileOnly(fileTree("libs"))
-    api(project(":JetpackMvvm"))
+    api 'com.github.9694101:YicJetpackMvvm:1.0'
 
     implementation 'com.github.jitpack:android-example:1.0.1'
 
     api 'com.google.android.material:material:1.9.0'
     api 'androidx.constraintlayout:constraintlayout:2.1.4'
-    api 'com.google.code.gson:gson:2.9.0'
+    api 'com.google.code.gson:gson:2.10'
     api 'de.hdodenhof:circleimageview:3.1.0'
-    api 'com.blankj:utilcodex:1.30.6'
+    api 'com.blankj:utilcodex:1.31.0'
 
     api 'com.gyf.immersionbar:immersionbar:3.0.0'
     api "com.airbnb.android:lottie:6.0.0"
